--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     </main>
     </div>
 
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/app.js?v=1.0.1"></script>
 </body>
 
 </html>
