--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Sena-Re Gear Manager</title>
-    <link rel="stylesheet" href="css/style.css?v=2">
+    <link rel="stylesheet" href="css/style.css?v=1.0.2">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -69,7 +69,9 @@
         <!-- Sidebar Navigation -->
         <nav class="sidebar">
             <div class="logo">
-                <h2>Sena-Re<br>Manager</h2>
+                <img src="assets/logo.jpg" alt="Sena-Re Logo"
+                    style="width: 100%; max-width: 150px; margin-bottom: 20px; border-radius: 10px; box-shadow: 0 0 15px rgba(102,252,241,0.2);">
+                <h2 style="display: none;">Sena-Re<br>Manager</h2>
             </div>
             <ul class="nav-links">
                 <li class="active" data-tab="dashboard">
@@ -431,7 +433,7 @@
     </main>
     </div>
 
-    <script type="module" src="js/app.js?v=1.0.1"></script>
+    <script type="module" src="js/app.js?v=1.0.2"></script>
 </body>
 
 </html>
