Complete dark red theme unification and change to Final Guild Manager

--- a/index.html
+++ b/index.html
@@ -128,32 +128,32 @@
         <!-- Sidebar Navigation -->
         <nav class="sidebar">
             <div class="logo"
-                style="text-align: center; padding: 25px 15px; border-bottom: 1px solid rgba(102, 252, 241, 0.1);">
-                <img src="assets/logo.jpg" alt="Sena-Re Logo" style="
+                style="text-align: center; padding: 25px 15px; border-bottom: 1px solid rgba(212, 87, 109, 0.1);">
+                <img src="assets/logo.jpg" alt="Final Guild Logo" style="
                     width: 90px; 
                     height: 90px; 
                     object-fit: contain; 
                     margin: 0 auto 15px; 
                     display: block;
                     border-radius: 12px; 
-                    background: linear-gradient(135deg, rgba(27, 38, 49, 0.8), rgba(15, 20, 25, 0.9));
+                    background: linear-gradient(135deg, rgba(26, 19, 21, 0.8), rgba(13, 10, 11, 0.9));
                     padding: 8px;
                     box-shadow: 
                         0 4px 15px rgba(0, 0, 0, 0.4),
-                        0 0 20px rgba(102, 252, 241, 0.15),
+                        0 0 20px rgba(212, 87, 109, 0.15),
                         inset 0 1px 0 rgba(255, 255, 255, 0.1);
-                    border: 1px solid rgba(102, 252, 241, 0.2);
+                    border: 1px solid rgba(212, 87, 109, 0.2);
                     transition: all 0.3s ease;
                 ">
                 <h2 style="
-                    font-size: 0.95rem; 
+                    font-size: 0.85rem; 
                     font-weight: 600; 
-                    letter-spacing: 1px;
-                    color: #66fcf1;
+                    letter-spacing: 1.2px;
+                    color: #d4576d;
                     margin: 0;
                     text-transform: uppercase;
-                    text-shadow: 0 0 10px rgba(102, 252, 241, 0.3);
-                ">SENA-RE<br><span style="font-size: 0.75rem; color: #c5c6c7; font-weight: 400;">MANAGER</span></h2>
+                    text-shadow: 0 0 10px rgba(212, 87, 109, 0.3);
+                ">FINAL GUILD<br><span style="font-size: 0.7rem; color: #c5a4a8; font-weight: 400;">MANAGER</span></h2>
             </div>
             <ul class="nav-links">
                 <li class="active" data-tab="dashboard">
