--- a/index.html
+++ b/index.html
@@ -14,116 +14,59 @@
 
 <body>
     <!-- 100% Reliable Access Lock -->
+    <!-- Guild Member Login Lock -->
     <div id="auth-lock"
-        style="position:fixed; top:0; left:0; width:100%; height:100%; background:#0b0c10; z-index:999999; display:flex; align-items:center; justify-content:center; color:white; font-family:sans-serif;">
+        style="position:fixed; top:0; left:0; width:100%; height:100%; background:var(--bg-dark); z-index:999999; display:flex; align-items:center; justify-content:center; color:white; font-family:'Inter', sans-serif;">
         <div
-            style="background:#1f2833; padding:30px; border-radius:15px; border:2px solid #66fcf1; text-align:center; box-shadow:0 0 20px rgba(102,252,241,0.3); width:320px;">
-            <h2 style="color:#66fcf1; margin-bottom:20px;">SENA-RE GEAR</h2>
-            <p style="font-size:0.9em; color:#c5c6c7; margin-bottom:20px;">인증 코드를 입력하세요.</p>
-            <input type="password" id="final-auth-input" placeholder="코드를 입력하고 엔터" autofocus
-                style="width:100%; padding:12px; border-radius:5px; border:1px solid #444; background:#0b0c10; color:white; text-align:center; font-size:1.1em; outline:none; margin-bottom:15px;">
-            <button onclick="confirmAuth()"
-                style="width:100%; padding:12px; background:#45a29e; border:none; color:black; font-weight:bold; border-radius:5px; cursor:pointer;">접속하기</button>
-            <p id="auth-fail-msg" style="color:#ff4444; font-size:0.8em; margin-top:10px; display:none;">잘못된 코드입니다.</p>
+            style="background:var(--bg-panel); padding:40px; border-radius:20px; border:2px solid var(--primary); text-align:center; box-shadow:0 0 30px rgba(153,0,0,0.3); width:380px;">
+
+            <div style="margin-bottom: 30px;">
+                <img src="assets/logo.jpg" alt="Logo"
+                    style="width:80px; height:80px; border-radius:50%; border:2px solid var(--primary); margin-bottom:15px;">
+                <h2 style="color:var(--primary); margin:0; font-size:1.5rem; letter-spacing:1px;">FINAL GUILD</h2>
+                <p style="color:var(--text-sub); font-size:0.9rem; margin-top:5px;">MEMBER LOGIN</p>
+            </div>
+
+            <!-- Global Auth (Step 1) -->
+            <div id="step-global-auth">
+                <p style="font-size:0.95em; color:var(--text-main); margin-bottom:20px;">길드 코드를 입력하세요.</p>
+                <input type="password" id="global-code-input" placeholder="ACCESS CODE" autofocus
+                    style="width:100%; padding:14px; border-radius:10px; border:1px solid var(--border-color); background:var(--bg-dark); color:white; text-align:center; font-size:1.2em; outline:none; margin-bottom:20px; letter-spacing: 2px;">
+                <button onclick="checkGlobalCode()" class="btn-submit" style="margin-top:0;">접속 확인</button>
+            </div>
+
+            <!-- Member Login (Step 2) -->
+            <div id="step-member-login" style="display:none;">
+                <div class="form-group" style="text-align:left;">
+                    <label style="color:var(--text-sub);">닉네임 선택</label>
+                    <select id="member-select"
+                        style="width:100%; padding:12px; border-radius:8px; background:var(--bg-dark); color:white; border:1px solid var(--border-color);">
+                        <option value="">본인의 닉네임을 선택하세요</option>
+                        <!-- Options injected by JS -->
+                    </select>
+                </div>
+
+                <!-- PIN Input Area -->
+                <div id="pin-area" style="display:none; margin-top:20px;">
+                    <p id="pin-instruction" style="color:var(--text-main); font-size:0.95em; margin-bottom:15px;">PIN 번호
+                        4자리를 입력하세요.</p>
+                    <div style="display:flex; justify-content:center; gap:10px; margin-bottom:20px;">
+                        <input type="password" class="pin-digit" maxlength="1"
+                            style="width:50px; height:60px; font-size:24px; text-align:center; background:var(--bg-dark); border:1px solid var(--border-color); border-radius:8px; color:white;">
+                        <input type="password" class="pin-digit" maxlength="1"
+                            style="width:50px; height:60px; font-size:24px; text-align:center; background:var(--bg-dark); border:1px solid var(--border-color); border-radius:8px; color:white;">
+                        <input type="password" class="pin-digit" maxlength="1"
+                            style="width:50px; height:60px; font-size:24px; text-align:center; background:var(--bg-dark); border:1px solid var(--border-color); border-radius:8px; color:white;">
+                        <input type="password" class="pin-digit" maxlength="1"
+                            style="width:50px; height:60px; font-size:24px; text-align:center; background:var(--bg-dark); border:1px solid var(--border-color); border-radius:8px; color:white;">
+                    </div>
+                    <p id="auth-msg" style="color:var(--danger); font-size:0.85em; min-height:1.2em;"></p>
+                    <button id="btn-login-action" class="btn-submit" style="margin-top:10px;">로그인</button>
+                </div>
+            </div>
+
         </div>
     </div>
-
-    <script>
-        (function () {
-            const code = 'senafinal0522';
-            const lock = document.getElementById('auth-lock');
-            const input = document.getElementById('final-auth-input');
-            const fail = document.getElementById('auth-fail-msg');
-            const btn = lock.querySelector('button');
-
-            // 실패 횟수 및 잠금 시간 관리
-            const getFailCount = () => parseInt(localStorage.getItem('auth_fail_count') || '0');
-            const setFailCount = (count) => localStorage.setItem('auth_fail_count', count.toString());
-            const getLockUntil = () => parseInt(localStorage.getItem('auth_lock_until') || '0');
-            const setLockUntil = (timestamp) => localStorage.setItem('auth_lock_until', timestamp.toString());
-
-            const check = () => {
-                if (sessionStorage.getItem('sena_auth') === 'true') {
-                    lock.style.display = 'none';
-                    return;
-                }
-
-                // 잠금 시간 확인
-                const lockUntil = getLockUntil();
-                const now = Date.now();
-
-                if (lockUntil > now) {
-                    const remainSec = Math.ceil((lockUntil - now) / 1000);
-                    const remainMin = Math.floor(remainSec / 60);
-                    input.disabled = true;
-                    btn.disabled = true;
-                    fail.style.display = 'block';
-                    fail.textContent = `너무 많은 시도로 인해 ${remainMin}분 ${remainSec % 60}초 후 재시도 가능합니다.`;
-
-                    setTimeout(check, 1000); // 1초마다 갱신
-                } else {
-                    input.disabled = false;
-                    btn.disabled = false;
-                }
-            };
-
-            window.confirmAuth = () => {
-                const lockUntil = getLockUntil();
-                const now = Date.now();
-
-                if (lockUntil > now) {
-                    return; // 잠금 중에는 시도 불가
-                }
-
-                if (input.value === code) {
-                    sessionStorage.setItem('sena_auth', 'true');
-                    localStorage.removeItem('auth_fail_count');
-                    localStorage.removeItem('auth_lock_until');
-                    lock.style.opacity = '0';
-                    setTimeout(() => lock.style.display = 'none', 300);
-                } else {
-                    const failCount = getFailCount() + 1;
-                    setFailCount(failCount);
-
-                    let lockMinutes = 0;
-                    if (failCount >= 10) {
-                        lockMinutes = 60; // 1시간
-                    } else if (failCount >= 5) {
-                        lockMinutes = 10; // 10분
-                    } else if (failCount >= 3) {
-                        lockMinutes = 1; // 1분
-                    }
-
-                    if (lockMinutes > 0) {
-                        setLockUntil(Date.now() + lockMinutes * 60 * 1000);
-                        fail.textContent = `${failCount}회 실패. ${lockMinutes}분 후 재시도 가능합니다.`;
-                        input.disabled = true;
-                        btn.disabled = true;
-                        setTimeout(check, 1000);
-                    } else {
-                        fail.textContent = `잘못된 코드입니다. (${failCount}/3)`;
-                        fail.style.display = 'block';
-                    }
-
-                    input.value = '';
-                    input.focus();
-                }
-            };
-
-            input.addEventListener('keypress', (e) => {
-                if (e.key === 'Enter') confirmAuth();
-            });
-
-            window.resetSena = () => {
-                sessionStorage.removeItem('sena_auth');
-                localStorage.removeItem('auth_fail_count');
-                localStorage.removeItem('auth_lock_until');
-                location.reload();
-            };
-
-            check();
-        })();
-    </script>
     <div class="app-container">
         <!-- Sidebar Navigation -->
         <nav class="sidebar">
