Fix navigation logic and update Guild War icon

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <!-- Guild Contents -->
                 <li class="nav-header">길드 컨텐츠</li>
                 <li data-tab="guild-war">
-                    <i class="fas fa-swords"></i> <span>길드전</span>
+                    <i class="fas fa-hand-fist"></i> <span>길드전</span>
                 </li>
                 <li data-tab="total-war">
                     <i class="fas fa-flag-checkered"></i> <span>총력전</span>
