--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@
                     <h2 id="hero-modal-title">영웅 등록</h2>
                     <form id="hero-form">
                         <input type="hidden" id="hero-id">
+                        <div class="form-group" style="text-align: center; margin-bottom: 20px;">
+                            <img id="hero-preview-icon" src="" alt="Hero Preview"
+                                style="width: 80px; height: 80px; border-radius: 50%; border: 2px solid var(--primary); display: none; margin: 0 auto;">
+                        </div>
                         <div class="form-group">
                             <label>이름</label>
                             <input type="text" id="hero-name" required placeholder="예: 파스칼">
