Fix: Hero Book layout to be wide and dense grid with robust CSS overrides

--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
                                 <i class="fas fa-search"></i>
                                 <input type="text" id="hero-search" placeholder="영웅 이름 검색...">
                             </div>
-                            <button id="hero-book-btn" class="btn-secondary"><i class="fas fa-book"></i> 도감에서
-                                추가</button>
+                            <button id="hero-book-btn" class="btn-primary"><i class="fas fa-book"></i> 도감에서 추가</button>
                             <button id="add-hero-btn" class="btn-primary"><i class="fas fa-plus"></i> 영웅 등록</button>
                         </div>
                     </div>
