--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Sena-Re Gear Manager</title>
-    <link rel="stylesheet" href="css/style.css?v=1.1.0">
+    <link rel="stylesheet" href="css/style.css?v=1.1.1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -200,13 +200,25 @@
                         <div class="gw-editor-vs-layout">
                             <div class="gw-editor-side">
                                 <div class="gw-editor-side-label">🎯 상대 방어팀</div>
-                                <div class="gw-editor-slots">
-                                    <div class="gw-hero-slot" id="gw-slot-enemy-0"
-                                        onclick="window.gwOpenPicker('enemy',0)"><i class="fas fa-plus"></i></div>
-                                    <div class="gw-hero-slot" id="gw-slot-enemy-1"
-                                        onclick="window.gwOpenPicker('enemy',1)"><i class="fas fa-plus"></i></div>
-                                    <div class="gw-hero-slot" id="gw-slot-enemy-2"
-                                        onclick="window.gwOpenPicker('enemy',2)"><i class="fas fa-plus"></i></div>
+                                <div class="gw-editor-slots-grid">
+                                    <div class="gw-editor-row-label">후열</div>
+                                    <div class="gw-editor-slots">
+                                        <div class="gw-hero-slot" id="gw-slot-enemy-0"
+                                            onclick="window.gwOpenPicker('enemy',0)"><i class="fas fa-plus"></i></div>
+                                        <div class="gw-hero-slot" id="gw-slot-enemy-1"
+                                            onclick="window.gwOpenPicker('enemy',1)"><i class="fas fa-plus"></i></div>
+                                        <div class="gw-hero-slot" id="gw-slot-enemy-2"
+                                            onclick="window.gwOpenPicker('enemy',2)"><i class="fas fa-plus"></i></div>
+                                    </div>
+                                    <div class="gw-editor-row-label">전열</div>
+                                    <div class="gw-editor-slots">
+                                        <div class="gw-hero-slot" id="gw-slot-enemy-3"
+                                            onclick="window.gwOpenPicker('enemy',3)"><i class="fas fa-plus"></i></div>
+                                        <div class="gw-hero-slot" id="gw-slot-enemy-4"
+                                            onclick="window.gwOpenPicker('enemy',4)"><i class="fas fa-plus"></i></div>
+                                        <div class="gw-hero-slot" id="gw-slot-enemy-5"
+                                            onclick="window.gwOpenPicker('enemy',5)"><i class="fas fa-plus"></i></div>
+                                    </div>
                                 </div>
                                 <div class="gw-editor-field">
                                     <label>대체 영웅 (or)</label>
@@ -216,13 +228,25 @@
                             <div class="gw-editor-vs">⚔️ VS</div>
                             <div class="gw-editor-side">
                                 <div class="gw-editor-side-label">🗡️ 상성 공격덱</div>
-                                <div class="gw-editor-slots">
-                                    <div class="gw-hero-slot" id="gw-slot-counter-0"
-                                        onclick="window.gwOpenPicker('counter',0)"><i class="fas fa-plus"></i></div>
-                                    <div class="gw-hero-slot" id="gw-slot-counter-1"
-                                        onclick="window.gwOpenPicker('counter',1)"><i class="fas fa-plus"></i></div>
-                                    <div class="gw-hero-slot" id="gw-slot-counter-2"
-                                        onclick="window.gwOpenPicker('counter',2)"><i class="fas fa-plus"></i></div>
+                                <div class="gw-editor-slots-grid">
+                                    <div class="gw-editor-row-label">후열</div>
+                                    <div class="gw-editor-slots">
+                                        <div class="gw-hero-slot" id="gw-slot-counter-0"
+                                            onclick="window.gwOpenPicker('counter',0)"><i class="fas fa-plus"></i></div>
+                                        <div class="gw-hero-slot" id="gw-slot-counter-1"
+                                            onclick="window.gwOpenPicker('counter',1)"><i class="fas fa-plus"></i></div>
+                                        <div class="gw-hero-slot" id="gw-slot-counter-2"
+                                            onclick="window.gwOpenPicker('counter',2)"><i class="fas fa-plus"></i></div>
+                                    </div>
+                                    <div class="gw-editor-row-label">전열</div>
+                                    <div class="gw-editor-slots">
+                                        <div class="gw-hero-slot" id="gw-slot-counter-3"
+                                            onclick="window.gwOpenPicker('counter',3)"><i class="fas fa-plus"></i></div>
+                                        <div class="gw-hero-slot" id="gw-slot-counter-4"
+                                            onclick="window.gwOpenPicker('counter',4)"><i class="fas fa-plus"></i></div>
+                                        <div class="gw-hero-slot" id="gw-slot-counter-5"
+                                            onclick="window.gwOpenPicker('counter',5)"><i class="fas fa-plus"></i></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
