Refactor: Guild War organization (Accordion groups, Category tags, empty slot fixes)

--- a/index.html
+++ b/index.html
@@ -263,13 +263,22 @@
                             </div>
                             <div class="gw-editor-field-row">
                                 <div class="gw-editor-field">
+                                    <label><i class="fas fa-tag"></i> 분류</label>
+                                    <select id="gw-category">
+                                        <option value="밸런스">밸런스덱</option>
+                                        <option value="방어">방어덱</option>
+                                        <option value="속도">속도덱</option>
+                                        <option value="커스텀">커스텀</option>
+                                    </select>
+                                </div>
+                                <div class="gw-editor-field">
                                     <label><i class="fas fa-paw"></i> 펫</label>
                                     <input type="text" id="gw-pet" placeholder="예: 이린">
                                 </div>
-                                <div class="gw-editor-field">
-                                    <label><i class="fas fa-info-circle"></i> 비고</label>
-                                    <input type="text" id="gw-note" placeholder="예: 오공 윗스킬 선일 경우">
-                                </div>
+                            </div>
+                            <div class="gw-editor-field">
+                                <label><i class="fas fa-info-circle"></i> 비고</label>
+                                <input type="text" id="gw-note" placeholder="예: 오공 윗스킬 선일 경우">
                             </div>
                         </div>
 
