--- a/index.html
+++ b/index.html
@@ -263,13 +263,8 @@
                             </div>
                             <div class="gw-editor-field-row">
                                 <div class="gw-editor-field">
-                                    <label><i class="fas fa-tag"></i> 분류</label>
-                                    <select id="gw-category">
-                                        <option value="밸런스">밸런스덱</option>
-                                        <option value="방어">방어덱</option>
-                                        <option value="속도">속도덱</option>
-                                        <option value="커스텀">커스텀</option>
-                                    </select>
+                                    <label><i class="fas fa-bolt"></i> 속공 (Speed)</label>
+                                    <input type="number" id="gw-speed" placeholder="예: 286" min="0">
                                 </div>
                                 <div class="gw-editor-field">
                                     <label><i class="fas fa-paw"></i> 펫</label>
