Fix: Guild War TypeError and UI refinements

--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
 
                         <div class="gw-editor-fields">
                             <div class="gw-editor-field">
+                                <label><i class="fas fa-heading"></i> 전략 제목</label>
+                                <input type="text" id="gw-title" placeholder="예: 여치덱 카운터 / 공덱용">
+                            </div>
+                            <div class="gw-editor-field">
                                 <label><i class="fas fa-list-ol"></i> 스킬순서</label>
                                 <input type="text" id="gw-skill-order" placeholder="예: 챈2 → 콜1 → 2">
                             </div>
