Fix: Separate Strategy and Counter Titles for clarity

--- a/index.html
+++ b/index.html
@@ -253,8 +253,12 @@
 
                         <div class="gw-editor-fields">
                             <div class="gw-editor-field">
-                                <label><i class="fas fa-heading"></i> 전략 제목</label>
-                                <input type="text" id="gw-title" placeholder="예: 여치덱 카운터 / 공덱용">
+                                <label><i class="fas fa-shield-alt"></i> 전략 제목 (상대 덱 명칭)</label>
+                                <input type="text" id="gw-enemy-title" placeholder="예: 오공 방덱 / 여치덱">
+                            </div>
+                            <div class="gw-editor-field">
+                                <label><i class="fas fa-heading"></i> 공략 제목 (카운터 명칭)</label>
+                                <input type="text" id="gw-title" placeholder="예: 저격형 카운터 / 선공덱">
                             </div>
                             <div class="gw-editor-field">
                                 <label><i class="fas fa-list-ol"></i> 스킬순서</label>
